Combined some course content templates + Fall 2022 schedules

--- a/igm_mycourses_templates/custom.css
+++ b/igm_mycourses_templates/custom.css
@@ -69,6 +69,11 @@ p + ul {
     margin-top: -10px;
 }
 
+li {
+    margin-top: -5px;
+    font-weight: 300;
+}
+
 p + ol {
     margin-top: -10px;
 }
