Formatting cleanup for schedules

--- a/igm_mycourses_templates/schedule.css
+++ b/igm_mycourses_templates/schedule.css
@@ -51,8 +51,6 @@ details[open] > *:not(summary) {
     color: inherit;
 }
 
-
-
 /* # Just Some Pretty Styles # */
 body {
     font-family: "Lato", sans-serif;
@@ -76,14 +74,14 @@ p:last-child {
 details {
     width: 100%;
     box-sizing: border-box;
-    margin-top: 5px;
+    margin-top: 10px;
     background: white;
 }
 
 summary {
     border: 1px solid transparent;
     outline: none;
-    padding: .5rem;
+    padding: .3rem;
     display: block;
     background: #666;
     color: white;
@@ -91,6 +89,7 @@ summary {
     padding-left: 2.2rem;
     position: relative;
     cursor: pointer;
+    font-size: 1.2rem;
 }
 
 /*
@@ -114,13 +113,14 @@ details[open] summary::before {
 
 .content {
     padding: 10px;
-    border: 2px solid #888;
+    border: 1px solid #888;
     border-top: none;
 }
 
 
 th {
     border-bottom: 1px solid black;
+    font-size: 1rem;
     text-align: left
         /* background-color: #f60;
     color: #fff*/
