--- a/igm_mycourses_templates/custom.css
+++ b/igm_mycourses_templates/custom.css
@@ -6,8 +6,7 @@
 
 html {
     /* sets base font size for rem sizing */
-    font-size: 16px;
-    line-height: 1.4rem;
+    font-size: 17px;
     font-family: 'Lato', sans-serif;
     font-weight: 300;
 }
@@ -16,53 +15,48 @@ body {
     padding-left: 20px;
     background-color: #fff;
     max-width: 1200px;
-    font-family: 'Lato';
 }
 
 h1 {
-    font-size: 2.1rem;
-    line-height: 2.2rem;
-    font-weight: 900;
-}
-
-h2 {
-    margin-bottom: 0px;
-    margin-top: 40px;
-}
-
-h3,
-h4 {
-    margin-bottom: 0px;
-    margin-top: 20px;
-}
-
-h2 {
-    border-bottom: 1px solid black;
-    font-size: 1.7rem;
+    font-size: 2.5rem;
     font-weight: 700;
-    padding-bottom: 2px;
-    margin-bottom: 10px;
+    margin-top: 20px;
+    margin-bottom: 5px;
+    color: #c95602;
+}
+
+h2 {
+    font-size: 2rem;
+    font-weight: 700;
+    border-bottom: 1px solid black;
+    margin-top: 20px;
+    margin-bottom: 5px;
 }
 
 h3 {
-    font-size: 1.3rem;
-    font-weight: 600;
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    color: #02819c;
 }
 
 h4 {
+    font-size: 1.3rem;
+    font-weight: 700;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
+h5 {
     font-size: 1.1rem;
     font-weight: 600;
-    color: #666;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
-
 
 p {
-    margin-top: 5px;
-    font-weight: 300;
-}
-
-p a {
-    font-weight: 400;
+    margin-top: 2px;
 }
 
 p + ul {
@@ -70,8 +64,7 @@ p + ul {
 }
 
 li {
-    margin-top: -5px;
-    font-weight: 300;
+    margin-top: -3px;
 }
 
 p + ol {
