--- a/igm_mycourses_templates/custom.css
+++ b/igm_mycourses_templates/custom.css
@@ -17,42 +17,45 @@ body {
     max-width: 1200px;
 }
 
+h1,
+h2 {
+    font-weight: 700;
+    margin-bottom: 5px;
+}
+
+h3,
+h4,
+h5 {
+    font-weight: 625;
+    margin-bottom: 3px;
+}
+
 h1 {
     font-size: 2.5rem;
-    font-weight: 700;
     margin-top: 20px;
-    margin-bottom: 5px;
     color: #c95602;
 }
 
 h2 {
     font-size: 2rem;
-    font-weight: 700;
     border-bottom: 1px solid black;
-    margin-top: 20px;
-    margin-bottom: 5px;
+    margin-top: 15px;
 }
 
 h3 {
-    font-size: 1.5rem;
-    font-weight: 700;
-    margin-top: 15px;
-    margin-bottom: 5px;
-    color: #686868;
+    font-size: 1.6rem;
+    margin-top: 10px;
+    font-style: italic;
 }
 
 h4 {
-    font-size: 1.3rem;
-    font-weight: 700;
-    margin-top: 10px;
-    margin-bottom: 5px;
+    font-size: 1.2rem;
+    margin-top: 5px;
 }
 
 h5 {
     font-size: 1.1rem;
-    font-weight: 600;
     margin-top: 5px;
-    margin-bottom: 5px;
 }
 
 p {
@@ -72,19 +75,22 @@ p + ol {
 }
 
 .jumbotron {
-    padding: 5px;
+    padding: 3px;
     margin: 5px;
     background: #f60;
     color: white;
-    text-align: center
+    text-align: center;
+    font-size: 1.1rem;
 }
 
 .highlight {
-    padding: 10px;
-    margin: 10px;
-    background: #686868;
-    color: white;
-    text-align: center
+    padding: 3px;
+    margin: 5px;
+    background: rgba(247, 105, 2, 0.4);
+    color: black;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 1.1rem;
 }
 
 .card-body {
